--- a/src/assets/css/admin.less
+++ b/src/assets/css/admin.less
@@ -1,3 +1,17 @@
+.blog-post-wrapper{
+  .btn-submit {
+    font-size: 1rem;
+    line-height: 2;
+    padding: 0 20px;
+    background-color: #fff;
+    border-radius: 3px;
+    border: 1px solid #999;
+    box-shadow: none;
+    cursor: pointer;
+    transition: all ease .3s;
+  }
+}
+
 .edit-list{
 
   .edit-item{
@@ -28,5 +42,14 @@
         }
       }
     }
+  }
+}
+
+.login_box{
+  h2{
+    margin-bottom: 30px;
+  }
+  .btn-submit{
+    margin-top: 30px;
   }
 }
