--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -176,6 +176,8 @@ a{
   width: 700px;
   margin-left: 260px;
   background-color: #fff;
+  word-break: break-all;
+  overflow: hidden;
 
   .title{
     text-align: center;
