--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -307,4 +307,47 @@ a{
     }
   }
 
+  .comment_list{
+    margin-top: 50px;
+
+    .comment{
+      text-align: left;
+      border-bottom: 1px solid #ccc;
+      padding: 0 20px;
+
+      .name{
+        color: #727272;
+        font-size: .9rem;
+      }
+      .content{
+        color: #3a3a3a;
+      }
+      .date{
+        color: #9ea8b0;
+        font-size: .8rem;
+        text-align: right;
+      }
+    }
+  }
+
+  .reply_box{
+    margin-top: 30px;
+    text-align: left;
+
+    label{
+      display: block;
+    }
+
+    button{
+      margin-top: 20px;
+      font-size: 1rem;
+      line-height: 2;
+      padding: 0 20px;
+      background-color: #fff;
+      border-radius: 3px;
+      cursor: pointer;
+      border: 1px solid #999;
+      box-shadow: none;
+    }
+  }
 }
